# sockets

./: CMakeLists.txt  README.md  client_tcp_2_chat.c  notes.txt  server_tcp_1.c  server_tcp_2_chat.c  showip.c  talker_udp_1.c  tcp_2_chat.h  tcp_2_client_list.c
SHOW_IP/: CMakeLists.txt
SHOW_IP/inc/: showip.h
TCP_BASIC_SERVER_CLIENT/: CMakeLists.txt
TCP_BASIC_SERVER_CLIENT/src/: client_tcp_1.c
TCP_MULTICLIENT_CHAT/: CMakeLists.txt  client_tcp_2_chat.c
TCP_MULTICLIENT_CHAT/inc/: tcp_2_common.h.in
TCP_MULTICLIENT_CHAT/src/: server_tcp_2_chat.c
TCP_MULTICLIENT_CHAT/src/TCP_CLIENT_LIST/: CMakeLists.txt  tcp_2_client_list.c
UDP_BASIC_SERVER_CLIENT/src/: listener_udp_1.c
